[PAY-3804] Fix scrollbar showing on first open of playlists (#11134)

--- a/packages/harmony/src/components/scrollbar/Scrollbar.module.css
+++ b/packages/harmony/src/components/scrollbar/Scrollbar.module.css
@@ -11,9 +11,7 @@
 .scrollbar :global(.ps__rail-y) {
   margin-top: var(--harmony-unit-1);
   margin-bottom: var(--harmony-unit-1);
-  transition:
-    background-color 0.2s ease-in-out,
-    opacity 0.2s ease-in-out;
+  transition: background-color 0.2s ease-in-out, opacity 0.2s ease-in-out;
   background-color: transparent !important;
 }
 
